Fri Dec 12 19:31:44 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/erb.rb (ERB#lineno): accessor for line number to eval.

	* lib/erb.rb (ERB#location=): setter of file name and line number.

Fri Dec 12 13:09:13 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_latest_gc_info): return :state field to show current
	  GC state (none/marking/sweeping).
	  [Feature #10590]

Fri Dec 12 10:49:18 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_crypt): check arguments more strictly.
	  * crypt() is not for wide char strings
	  * salt bytes should not be NUL

Fri Dec 12 08:16:01 2014  Matt Hoyle  <matt@deployable.co>

	* io.c (io_read) Fix spelling in docco for read.  [Fix GH-781]
	  try > tries

Thu Dec 11 19:06:01 2014  Koichi Sasada  <ko1@atdot.net>

	* class.c (class_alloc): Start from age == 2.
	  Class and Module objects can be living long life.

	* iseq.c: Same for ISeq objects.

	* gc.c (RVALUE_AGE_RESET): added.

	* gc.c (newobj_of): allow to generate (age != 0) objects.

	* gc.c (rb_copy_wb_protected_attribute): reset age for wb unprotected
	  objects.

	* include/ruby/ruby.h: add RUBY_TYPED_PROMOTED1 as an unrecommended
	  flag.

Thu Dec 11 05:37:52 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/prime.rb: Remove useless loop and block capture.
	  See [#10354]

Thu Dec 11 04:27:24 2014  Koichi Sasada  <ko1@atdot.net>

	* vm_core.h: introduce new field
	  rb_thread_t::local_storage_recursive_hash_for_trace to store
	  recursive hash to avoid creating new recursive (nested) hashes
	  for each trace events.
	  [Bug #10511]

	* vm_trace.c (rb_threadptr_exec_event_hooks_orig): use it.

	* cont.c: catch up this fix.

	* vm.c (rb_thread_mark): ditto.

Wed Dec 10 13:39:27 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* struct.c (define_aref_method, define_aset_method): use iseq
	  VALUE instead of rb_iseq_t to prevent from GC, as RB_GC_GUARD
	  makes sense only for local variables.  [Feature #10575]
