@@ -797,7 +797,7 @@ class ERB
     @safe_level = safe_level
     compiler = make_compiler(trim_mode)
     set_eoutvar(compiler, eoutvar)
-    @src, @enc = *compiler.compile(str)
+    @src, @encoding = *compiler.compile(str)
     @filename = nil
     @lineno = 0
   end
@@ -811,6 +811,9 @@ class ERB
 
   # The Ruby code generated by ERB
   attr_reader :src
+
+  # The encoding to eval
+  attr_reader :encoding
 
   # The optional _filename_ argument passed to Kernel#eval when the ERB code
   # is run
@@ -879,7 +882,7 @@ class ERB
   #   print MyClass.new.render('foo', 123)
   def def_method(mod, methodname, fname='(ERB)')
     src = self.src
-    magic_comment = "#coding:#{@enc}\n"
+    magic_comment = "#coding:#{@encoding}\n"
     mod.module_eval do
       eval(magic_comment + "def #{methodname}\n" + src + "\nend\n", binding, fname, -2)
     end
